--- a/www/core/components/login/templates/credentials.html
+++ b/www/core/components/login/templates/credentials.html
@@ -1,12 +1,48 @@
-<ion-view view-title="{{ 'mm.login.credentials' | translate }}">
+<ion-view view-title="blearn">
   <ion-content mm-state-class>
-    <div class="card">
+    <!--<div class="ardc">
         <div class="item item-text-wrap item-avatar-center">
             <img ng-src="img/user-avatar.png" class="avatar" mm-external-content role="presentation">
             <p>{{ 'mm.login.credentialsdescription' | translate }}</p>
             <h2 class="padding">{{siteurl}}</h2>
         </div>
+    </div>-->
+    <div class="page-header">
+       <div class="container-fluid" id="yui_3_17_2_1_1477432282808_42">
+            <div class="row-fluid" id="yui_3_17_2_1_1477432282808_41">
+                <!-- HEADER: LOGO AREA -->
+   <div class="ecol7 pull-left">
+       <a class="logo" href="//blearn.co" title="Home"></a>
     </div>
+    <div class="icon-collapse collapse pull-right" id="yui_3_17_2_1_1477432282808_40">
+       <div class="pull-right" id="socialnetworks">
+           <p class="socialheading2" id="socialheading">Social networks</p>
+              <ul class="socials unstyled" id="yui_3_17_2_1_1477432282808_39">
+                 <li id="yui_3_17_2_1_1477432282808_38">
+      <button type="button" class="socialicon twitter" onclick="window.open('https://twitter.com/MoodLearning')" 
+      title="Twitter" id="yui_3_17_2_1_1477432282808_37">
+      <i class="icon icon2 ion-social-twitter" id="yui_3_17_2_1_1477432282808_36">
+      </i><span class="sr-only"></span>
+      </button>
+    </li>
+    <li><button type="button" class="socialicon facebook" 
+      onclick="window.open('http://www.facebook.com/mood.learning')" 
+      title="Facebook"><i class="icon icon2 ion-social-facebook">
+      </i><span class="sr-only"></span></button>
+    </li>
+    <li><button type="button" class="socialicon website" 
+      onclick="window.open('http://blearn.co')"
+      title="Website"><i class="icon icon2 ion-android-globe">
+      </i><span class="sr-only"></span></button>
+    </li>                            
+        </ul>
+              </div>
+           </div>
+         </div>
+    </div>
+     </div>
+
+    
     <div class="list list-inset">
       <form>
         <ion-input class="item item-input item-stacked-label">
